--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -9,13 +9,16 @@
 .m-l-15{margin-left:15px;}
 .m-b-5{margin-bottom:5px;}
 .m-b-10{margin-bottom:10px;}
-.m-b-20{margin-bottom:20px;}
+.m-b-20{margin-bottom:20px;} 
+.m-b-30{margin-bottom:30px;}
+.m-b-50{margin-bottom:50px;}
 .m-b-0{margin-bottom:0px;}
 .m-t-10{margin-top:10px;}
 .m-t-0{margin-top:0px;}
 .m-t-5{margin-top:5px;}
 .m-t-20{margin-top:20px;}
 .m-t-30{margin-top:30px;}
+.m-t-50{margin-top:50px;}
 .p-10{padding:10px;}
 .p-20{padding:20px;}
 .p-t-20{padding-top:20px;}
@@ -61,3 +64,4 @@
 .header .navbar-nav .dropdown-menu{margin-top:1px;}
 
 .b{font-weight:bold;}
+.row-ie7{*margin-left:15px;*margin-right:15px;}
