--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,4 +1,10 @@
 /* here you can put your own css to customize and override the theme */
+html, body{
+   font-family: "Microsoft YaHei","微软雅黑","宋体","SimHei",Verdana,Arial;
+    font-size: 14px;
+    background-color: #FFF;
+    color:#666666;
+}
 .tip {display: block;margin-top: 5px;margin-bottom: 10px;color: #737373;}
 .hint {display: inline;color: #737373;}
 .header .navbar-brand{margin-top:0px;padding-top:0px;padding-bottom:0px;width:auto;}
