--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -65,3 +65,6 @@
 
 .b{font-weight:bold;}
 .row-ie7{*margin-left:15px;*margin-right:15px;}
+
+#l-map{height:500px;width:100%;}
+#r-result{height:500px; width:100%;}
