关于我们 加入我们

--- a/public/assets/css/frontend/style.css
+++ b/public/assets/css/frontend/style.css
@@ -1163,7 +1163,7 @@ div.content-form-page .checkbox-list {
     padding-top: 45px;
 }
 .pre-footer a {
-    color: rgb(87, 200, 235);
+    color: #FFFFFF;
 }
 .pre-footer h2, .ecommerce .pre-footer h2 {
     color: rgb(194, 193, 193);
