--- a/public/assets/css/bootstrap-ie7.css
+++ b/public/assets/css/bootstrap-ie7.css
@@ -224,3 +224,5 @@ ul .list-group-item{list-style:none}
 .glyphicon-wrench{zoom:expression(this.runtimeStyle['zoom']='1',this.innerHTML='&#xe136;')}
 .glyphicon-zoom-in{zoom:expression(this.runtimeStyle['zoom']='1',this.innerHTML='&#xe015;')}
 .glyphicon-zoom-out{zoom:expression(this.runtimeStyle['zoom']='1',this.innerHTML='&#xe016;')}
+
+.con{*margin-left:15px;*margin-right:15px;}
