--- a/public/assets/css/theme-style.css
+++ b/public/assets/css/theme-style.css
@@ -12,7 +12,7 @@ body a{
 	-ms-transition:0.5s all;
 }
 
-body a:hover{color:#FFFFFF;}
+
 .m-b-10{margin-bottom: 10px;}
 /*-----start-header----*/
 .header{
@@ -353,7 +353,7 @@ nav a {
 .b-animate button{
 	background: #000;
 	padding: 0.9em 1.8em;
-	color: #00AAEF;
+	color: #FFFFFF;
 	text-transform: uppercase;
 	font-size: 0.875em;
 	border: none;
@@ -445,7 +445,7 @@ h3.m_21 {
 	font-weight: 400;
 	line-height: 1.5em;
 }
-.consulation-left p{
+.consulation-left p,.consulation-right p{
 	line-height: 1.8em;
 	font-size: 14px;
 }
@@ -520,5 +520,4 @@ h3.m_21 {
 	-moz-opacity: 0;
 	filter: alpha(opacity=0);
 }
-
-
+.list-group-item{font-size:14px;}
