--- a/public/assets/css/frontend/style.css
+++ b/public/assets/css/frontend/style.css
@@ -947,11 +947,9 @@ body.page-header-fixed {
 .content-page {
     background: none repeat scroll 0 0 rgb(255, 255, 255);
     margin-right: 10px;
-    padding: 20px;
+    padding: 10px;
 }
-.corporate .content-page {
-    padding: 0 0 20px;
-}
+
 .content-page a, .sidebar2 a {
     color: rgb(118, 127, 136);
 }
@@ -1121,7 +1119,7 @@ div.content-form-page .checkbox-list {
     padding: 5px 15px 4px;
 }
 .tab-content {
-    background: none repeat scroll 0 0 rgb(250, 250, 250);
+    /*background: none repeat scroll 0 0 rgb(250, 250, 250);*/
     padding: 20px 15px;
 }
 .content-search {
