--- a/public/assets/css/theme-style.css
+++ b/public/assets/css/theme-style.css
@@ -38,7 +38,7 @@ body a{
 	font-weight: 500;
 	display: block;
 }
-.contact-order {color:#FFFFFF;}
+.contact-order {color:#FFFFFF; font-size: 18px;}
 .contact-order a{
 	font-size: 18px;
 	color: #FFFFFF;
@@ -521,3 +521,5 @@ h3.m_21 {
 	filter: alpha(opacity=0);
 }
 .list-group-item{font-size:14px;}
+.c-l{color:#333; font-size:16px;}
+a.c-l{font-size:16px;}
