--- a/public/assets/css/frontend/style.css
+++ b/public/assets/css/frontend/style.css
@@ -948,6 +948,7 @@ body.page-header-fixed {
     background: none repeat scroll 0 0 rgb(255, 255, 255);
     margin-right: 10px;
     padding: 20px;
+    min-height:500px;
 }
 
 .content-page a, .sidebar2 a {
