--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -27,6 +27,9 @@ html, body{
 .m-t-50{margin-top:50px;}
 .p-10{padding:10px;}
 .p-20{padding:20px;}
+.p-30{padding:30px;}
+.p-l-30{padding-left:30px;}
+.p-r-30{padding-right:30px;}
 .p-t-20{padding-top:20px;}
 .p-b-20{padding-bottom:20px;}
 .padding-l-50 {padding-left:50px;}
