--- a/public/assets/css/theme-style.css
+++ b/public/assets/css/theme-style.css
@@ -33,14 +33,13 @@ body a{
     
 }
 .contact-no{
-	font-size: 24px;
+	
 	color: #FFFFFF;
 	font-weight: 500;
 	display: block;
 }
-.contact-order {color:#FFFFFF; font-size: 18px;}
+.contact-order {color:#FFFFFF; }
 .contact-order a{
-	font-size: 18px;
 	color: #FFFFFF;
 	font-weight: 500;
 }
@@ -60,7 +59,7 @@ body a{
 }
 nav {
 	position: absolute;
-	bottom: 0px;
+	bottom: 10px;
 }
 nav ul {
 	padding: 0;
@@ -75,7 +74,7 @@ nav a {
 	display: inline-block;
 	text-align: center;
 	text-decoration: none;
-	line-height: 40px;
+	line-height: 20px;
 }
 .top-nav ul li a{
 	color: #FFF;
